force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>An engagement being delivered. Groups Work_Item__c records and ties them back to the Opportunity that sold the work.</description>
    <label>Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>