force-app/main/default/objects/Project__c/fields/External_Project_Key__c.field-meta.xml
<CustomField>
    <fullName>External_Project_Key__c</fullName>
    <description>Project key in the external system, e.g. the Jira project key DOPP.</description>
    <inlineHelpText>Jira project key (e.g. DOPP) or Asana project GID.</inlineHelpText>
    <label>External Project Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>