force-app/main/default/objects/Project__c/fields/External_System__c.field-meta.xml
<CustomField>
    <fullName>External_System__c</fullName>
    <description>System of record this project is synced from. Backed by the External_System global value set.</description>
    <label>External System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>External_System</valueSetName>
    </valueSet>
</CustomField>