force-app/main/default/objects/Project__c/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drives guest visibility. No guest permission set exists yet; this flag is recorded now so later builds have it.</description>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>