force-app/main/default/objects/Project__c/fields/Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Short_Name__c</fullName>
    <description>Compact display label used on board cards where the full project name will not fit.</description>
    <label>Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>